bk_ida/gccida/c2/load_pic_register
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/load_pic_register/src/i386.c:4394:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/load_pic_register/src/obj/i386.o] Error 1
